--- a/templates/studentInfo.html
+++ b/templates/studentInfo.html
@@ -27,6 +27,9 @@
         <a href="{{ url_for('frontPage') }}">
           <button class="coming-soon-btn">Etusivu</button>
         </a>
+        <a href="{{ url_for('avatar') }}">
+          <button class="coming-soon-btn">Avatarin vaihto</button>
+        </a>
       </div>
     </div>
   </header>
