--- a/templates/mathMenu3rdGrade.html
+++ b/templates/mathMenu3rdGrade.html
@@ -16,8 +16,9 @@
         <img class="site-title" src="{{ url_for('static', filename='kuvat/logoWhite.png') }}" alt="Logo valkoinen">
         <div class="avatar-dropdown">
           <button class="icon-button" aria-label="Menu">
-            <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/4fe30ddc3b898acf88f46ad779a7295745ba4d35ef0a4a6ccabf35735c61a035?placeholderIfAbsent=true&apiKey=d4a6829ab0a243af995c418502f3ed93"
-                class="icon-image" alt="Avatar" />
+            <!--<img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/4fe30ddc3b898acf88f46ad779a7295745ba4d35ef0a4a6ccabf35735c61a035?placeholderIfAbsent=true&apiKey=d4a6829ab0a243af995c418502f3ed93" 
+                class="icon-image" alt="Avatar" />-->
+                <img loading="lazy" src="{{ g.user_avatar_url }}" class="icon-image" alt="Avatar" style="width: 100%; height: 100%; border-radius: 50%;" />
           </button>
           <div class="dropdown-content">
             <a href="#">Profiili</a>
