--- a/templates/gameScreen1.html
+++ b/templates/gameScreen1.html
@@ -11,9 +11,7 @@
         <header class="header">
             <h1 class="subject-title">Matematiikka</h1>
             <button class="icon-button" aria-label="Menu">
-                <!--<img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/4fe30ddc3b898acf88f46ad779a7295745ba4d35ef0a4a6ccabf35735c61a035?placeholderIfAbsent=true&apiKey=d4a6829ab0a243af995c418502f3ed93" 
-                    class="icon-image" alt="Avatar" />-->
-                    <img loading="lazy" src="{{ g.user_avatar_url }}" class="icon-image" alt="Avatar" style="width: 100%; height: 100%; border-radius: 50%;" />
+                <img loading="lazy" src="{{ g.user_avatar_url }}" class="icon-image" alt="Avatar" style="width: 100%; height: 100%; border-radius: 50%;" />
             </button>
         </header>
         <main class="content-area">
@@ -23,11 +21,12 @@
                         class="icon-image" alt="Takaisin" />
                 </button>
                 <div class="main-display" role="img" aria-label="Main content display">
+                    <!-- Muutetaan vaikeustasojen asetukset ja viestit -->
                     <div id="difficulty-overlay" class="overlay">
                         <div class="difficulty-buttons-container">
-                            <button class="difficulty-button" onclick="selectDifficulty('Helppo', 'Helppo taso: Saat 10 pistettä jokaisesta oikeasta vastauksesta.', 0, 10)">Helppo</button>
-                            <button class="difficulty-button" onclick="selectDifficulty('Keskivaikea', 'Keskivaikea taso: Saat 15 pistettä jokaisesta oikeasta vastauksesta. Aika: 2 minuuttia.', 120, 15)">Keskivaikea</button>
-                            <button class="difficulty-button" onclick="selectDifficulty('Vaikea', 'Vaikea taso: Saat 20 pistettä jokaisesta oikeasta vastauksesta. Aika: 1 minuutti.', 60, 20)">Vaikea</button>
+                            <button class="difficulty-button" onclick="selectDifficulty('Helppo', 'Helppo taso: Saat 10 pistettä jokaisesta oikeasta vastauksesta. Ei aikarajaa.', 0, 10)">Helppo</button>
+                            <button class="difficulty-button" onclick="selectDifficulty('Keskivaikea', 'Keskivaikea taso: Saat 15 pistettä jokaisesta oikeasta vastauksesta. Aika: 5 minuuttia. Lisäpisteet jäljellä olevan ajan perusteella: Yli 3 minuuttia: +100 pistettä, 2–3 minuuttia: +50 pistettä, 1–2 minuuttia: +25 pistettä, alle 1 minuutti: +10 pistettä.', 300, 15)">Keskivaikea</button>
+                            <button class="difficulty-button" onclick="selectDifficulty('Vaikea', 'Vaikea taso: Saat 20 pistettä jokaisesta oikeasta vastauksesta. Aika: 2 minuuttia. Lisäpisteet jäljellä olevan ajan perusteella: Yli 1 minuutti: +200 pistettä, alle 1 minuutti: +150 pistettä.', 120, 20)">Vaikea</button>
                         </div>
                         <button class="start-button" onclick="startGame()" disabled>Aloita</button>
                     </div>
@@ -43,8 +42,6 @@
                     <div id="feedbackImage">
                         <img id="mattiImage" loading="lazy" src="{{ url_for('static', filename='Kuvat/mattiNeutGame.png') }}">
                     </div>
-                       
-                   
                     <div class="sidebar-content">
                         <div class="sidebar-inner" role="complementary" aria-label="Sidebar content">
                             <h2 class="sidebar-title">Ohjeet</h2>
@@ -53,9 +50,7 @@
                             <div id="score" class="hidden">Pisteet: 0</div> <!-- Pistelaskuri -->
                             <div id="timer" class="hidden">Aika: 1:00</div> <!-- Ajastin -->
                         </div>
-                  
                     </div>
-                
                 </aside>
             </section>
         </main>
@@ -68,8 +63,12 @@
 
             if (pelinId >= 1 && pelinId <= 18) {
                 backUrl = "{{ url_for('math_menu', grade=3) }}";
-            } else if (pelinId >= 19 && pelinId <= 30) {
+            } else if (pelinId >= 19 && pelinId <= 23) {
                 backUrl = "{{ url_for('math_menu', grade=4) }}";
+            } else if (pelinId >= 24 && pelinId <= 30) {
+                backUrl = "{{ url_for('math_menu', grade=5) }}";
+            } else if (pelinId >= 31 && pelinId <= 35) {
+                backUrl = "{{ url_for('math_menu', grade=6) }}";
             }
             window.location.href = backUrl;
         }
@@ -135,12 +134,9 @@
                 showMessage('Oikein!');
                 score += pointsPerCorrectAnswer; // Lisätään pisteitä valitun vaikeustason mukaan
                 imageElement.src = "{{ url_for('static', filename='kuvat/mattiFappyGame.png') }}";
-
-                
             } else {
                 showMessage('Väärin, yritä uudelleen.');
                 imageElement.src = "{{ url_for('static', filename='kuvat/mattiSadGame.png') }}";
-
             }
             document.getElementById("score").innerText = `Pisteet: ${score}`; // Päivitetään pistelaskuri
             if (questionCount >= 10) {
@@ -160,26 +156,26 @@
 
             // Lisätään lisäpisteet jäljellä olevan ajan perusteella, jos aikaa on jäljellä
             if (remainingTime > 0 && gameDuration > 0) {
-                if (gameDuration === 120) { // Keskivaikea
-                    if (remainingTime > 60) {
+                if (gameDuration === 300) { // Keskivaikea
+                    if (remainingTime > 180) {
                         score += 100;
-                    } else if (remainingTime > 30) {
+                    } else if (remainingTime > 120) {
                         score += 50;
-                    } else {
+                    } else if (remainingTime > 60) {
                         score += 25;
+                    } else {
+                        score += 10;
                     }
-                } else if (gameDuration === 60) { // Vaikea
-                    if (remainingTime > 30) {
+                } else if (gameDuration === 120) { // Vaikea
+                    if (remainingTime > 60) {
                         score += 200;
                     } else {
                         score += 150;
                     }
                 }
             }
-
             // Päivitetään pistelaskuri
             document.getElementById("score").innerText = `Pisteet: ${score}`;
-
             // Tallennetaan lopullinen pistemäärä sessioon
             sessionStorage.setItem('final_score', score);
             const correctAnswers = sessionStorage.getItem('correct_answers') || 0;
