--- a/templates/mathMenu6rdGrade.html
+++ b/templates/mathMenu6rdGrade.html
@@ -16,13 +16,11 @@
         <img class="site-title" src="{{ url_for('static', filename='kuvat/logoWhite.png') }}" alt="Logo valkoinen">
         <div class="avatar-dropdown">
           <button class="icon-button" aria-label="Menu">
-            <!--<img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/TEMP/4fe30ddc3b898acf88f46ad779a7295745ba4d35ef0a4a6ccabf35735c61a035?placeholderIfAbsent=true&apiKey=d4a6829ab0a243af995c418502f3ed93" 
-                class="icon-image" alt="Avatar" />-->
                 <img loading="lazy" src="{{ g.user_avatar_url }}" class="icon-image" alt="Avatar" style="width: 100%; height: 100%; border-radius: 50%;" />
           </button>
           <div class="dropdown-content">
-            <a href="#">Profiili</a>
-            <a href="#">Pelitulokset</a>
+            <a href="{{ url_for('student_info') }}">Profiili</a>
+            <a href="{{ url_for('avatar') }}">Avatar</a>
             <a href="{{ url_for('logout') }}">Kirjaudu ulos</a>
           </div>
         </div>
@@ -50,14 +48,21 @@
     <!-- Pelivalikko (toka osio sivulla)-->
     <section class="games-section">
       <div class="games-container">
-        <!-- button
-          class="game-button"
-          tabindex="0"
-          onclick="window.location.href='peli1.html';"
-        >Peli 1</button> -->
-        <div class="dropdown">
-          <button class="game-button">6 luokka peli 1</button>
-        </div>
+        <a href="{{ url_for('peli', pelin_id=31) }}">
+          <button class="game-button">Laskujärjestys</button>
+        </a>
+        <a href="{{ url_for('peli', pelin_id=32) }}">
+          <button class="game-button">Desimaalilukujen yhteen- ja vähennyslaskut </button>
+        </a>
+        <a href="{{ url_for('peli', pelin_id=33) }}">
+          <button class="game-button">Jakolaskut murtoluvuilla</button>
+        </a>
+        <a href="{{ url_for('peli', pelin_id=34) }}">
+          <button class="game-button">Prosenttilaskuja sovellettuna </button>
+        </a>
+        <a href="{{ url_for('peli', pelin_id=35) }}">
+          <button class="game-button">Pinta-ala</button>
+        </a>
       </div>
     </section>
   </body>
