avatar vaihtaminen korjattu, oppilaan tiedoissa näkyy luokka nimi luokkaID:n sijasta

--- a/templates/studentInfo.html
+++ b/templates/studentInfo.html
@@ -56,7 +56,7 @@
               </tr>
               <tr>
                 <td class="infoTxt">Luokka:</td>
-                <td><div id="luokka">{{ oppilas.luokkaID }}</div></td>
+                <td><div id="luokka">{{ luokka_nimi }}</div></td>
               </tr>
             </table>
           </div>
