lisätty teacherAccess.html, jonne annetaan opettajien yhteinen salasana ennen kirjautumisnäkymään siirtymistä

--- a/templates/firstscreen.html
+++ b/templates/firstscreen.html
@@ -59,7 +59,7 @@
     <!-- Painikkeet opettajan ja oppilaan kirjautumiseen -->
     <div class="container">
         <div class="row">
-        <a href="{{ url_for('teacher_login') }}">
+        <a href="{{ url_for('teacher_access') }}">
             <img class="bbtFS" src="{{ url_for('static', filename='kuvat/opettajaLogo.png') }}" alt="" style="width: 30%;" >
             
         </a>
