ylimääräinen ryhmänäkymä pois käytöstä

--- a/templates/groupSelection.html
+++ b/templates/groupSelection.html
@@ -136,7 +136,7 @@
       </div>
       <div class="header-bottom">
         <div class="nav-buttons">
-            <button class="coming-soon-btn"onclick=window.location.href="{{ url_for('group_management') }}">Takaisin</button>
+            <button class="coming-soon-btn"onclick=window.location.href="{{ url_for('teacher_menu') }}">Takaisin</button>
         </div>
       </div>
     </header>
