--- a/templates/teacherMenu.html
+++ b/templates/teacherMenu.html
@@ -37,7 +37,7 @@
             <button class="coming-soon-btn">Etusivu</button>
           </a>-->
           <button class="coming-soon-btn"onclick=window.location.href="{{ url_for('students_info') }}">Oppilaat</button>
-          <button class="coming-soon-btn"onclick=window.location.href="{{ url_for('group_management') }}">Ryhmät</button>
+          <button class="coming-soon-btn"onclick=window.location.href="{{ url_for('group_selection') }}">Ryhmät</button>
           <!-- Matematiikka-nappi ja alasvetovalikko -->
         </div>
        
