Kommentoitu opettajan nimi valikosta pois, koska ei toimi xD

--- a/templates/groupManagement.html
+++ b/templates/groupManagement.html
@@ -76,7 +76,7 @@
                 class="icon-image" alt="Avatar" />
           </button>
           <div class="dropdown-content">
-            <a class="opettajaNimi" href="#">Opettaja nimi</a>
+            <!--<a class="opettajaNimi" href="#">Opettaja nimi</a>--> 
             <a href="{{ url_for('logout') }}">Kirjaudu ulos</a>
           </div>
         </div>
